tests/fixtures/invalid/divmod_none_bytes.py
# Cannot call divmod() with None, Bytes
x = divmod(None, b"hello")
